# Sebastian

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INDEX.md  LICENSE  README.md  README.zh-CN.md  bash.exe.stackdump  bootstrap.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  RELEASING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AGENTIC_DEPLOYMENT.md  DEPLOYMENT.md
docs/handbook/: mobile-dev-gotchas.md  testing-gotchas.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: dev.sh  install.sh  re_encrypt_api_keys.py  setup-https.sh
sebastian/: README.md  main.py
sebastian/agents/: README.md  _loader.py
sebastian/capabilities/: README.md  mcp_client.py  registry.py
sebastian/cli/: README.md  __init__.py  daemon.py  init_wizard.py  service.py  service_templates.py  skills.py  updater.py
sebastian/config/: README.md  __init__.py
sebastian/context/: README.md  compaction.py  prompts.py  token_meter.py
sebastian/core/: README.md  agent_loop.py  agent_pool.py  base_agent.py  compaction_hook.py  protocols.py  session_runner.py  soul_loader.py  stalled_watchdog.py  stream_events.py  stream_helpers.py  task_manager.py  tool.py  types.py
sebastian/gateway/: README.md  app.py  auth.py  completion_notifier.py  sse.py  state.py
sebastian/identity/: README.md
sebastian/llm/: README.md  anthropic.py  crypto.py  openai_compat.py  provider.py  registry.py
sebastian/log/: README.md  __init__.py  manager.py
sebastian/memory/: README.md  consolidation.py  constants.py  data-flow.md  decision_log.py  entity_registry.py  episode_store.py  episodic_memory.py  errors.py  extraction.py  feedback.py  pipeline.py  profile_store.py  provider_bindings.py  resident_dedupe.py  resident_snapshot.py  resolver.py  retrieval.py  retrieval_lexicon.py  segmentation.py  slot_proposals.py  slots.py  startup.py  store.py  subject.py  types.py  working_memory.py  write_router.py
sebastian/orchestrator/: README.md  conversation.py  sebas.py
sebastian/permissions/: README.md  gate.py  reviewer.py  types.py
sebastian/protocol/: README.md
sebastian/sandbox/: README.md
sebastian/skills_registry/: __init__.py  installer.py  lockfile.py  models.py  safety.py
sebastian/store/: README.md  app_settings_store.py  attachments.py  database.py  event_log.py  index_store.py  migration.py  models.py  owner_store.py  session_context.py  (+7 more)
tests/: README.md  conftest.py
(+921 files in other folders)
