[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sebastian"
version = "0.5.9"
description = "Personal AI butler system — your own Jarvis"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "aiofiles>=24.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-ulid>=3.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "Pillow>=10.0",
    "jieba>=0.42",
    "playwright>=1.45",
]

[project.optional-dependencies]
memory = []
voice = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-aiofiles>=24.1",
    "types-passlib>=1.7",
    "types-python-jose>=3.5",
]

[project.scripts]
sebastian = "sebastian.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
